# chatTCP_wincli

./: CMakeLists.txt  ChatServer.cpp  ChatServer.h  README.md  etcp.h  iofuncs.c  main.cpp  skel.h  sofuncs.c  wincompat.c  wincompat.cpp
src/: ChatServer.cpp  ChatServer.h  etcp.h  iofuncs.c  main.cpp  sofuncs.c
